# libspeechprovider

./: README.md  meson.build  meson_options.txt
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  website.yml
doc/: SpeechProvider.toml.in  meson.build
interface/: generate_enums.py  meson.build  org.freedesktop.Speech.Provider.xml
libspeechprovider/: meson.build  speech-provider-stream-reader.c  speech-provider-stream-writer.c
libspeechprovider-rs/: Cargo.toml  meson.build
libspeechprovider-rs/libspeechprovider-sys/: Gir.toml  meson.build
speechprovider-rs/: Cargo.toml  Gir.toml  README.md  meson.build
speechprovider-rs/src/: lib.rs  meson.build
speechprovider-rs/sys/: Gir.toml  meson.build
tests/: _common.py  meson.build
