option('tests', type: 'boolean', value: true, description: 'Enable tests')
option('docs', type: 'boolean', value: true, description: 'Enable docs')
option('introspection', type: 'boolean', value: true, description: 'Enable GObject Introspection', yield: true)
option('rust-bindings', type: 'boolean', value: false, description: 'Generate Rust bindings')
